Fixed nav alignment on desktop

--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -21,6 +21,7 @@
     display: flex;
     flex-direction: column;
     height: 85%;
+    width: 80%;
 }
 
 .navigation-name{
